fix: hidden package table collapsing, feat: table search for improved lookup

--- a/main/app/static/styles/package-table.css
+++ b/main/app/static/styles/package-table.css
@@ -3,6 +3,10 @@
   padding-right: 2rem;
 }
 
+.hide-entry {
+  display: none;
+}
+
 .tablecenter {
   margin-left: 0px;
   margin-right: 0px;
